--- a/android/assets/jsons/translations/German.properties
+++ b/android/assets/jsons/translations/German.properties
@@ -668,12 +668,12 @@ Clearing a [forest] has created [amount] Production for [cityName] = Die Rodung 
 The [questName] quest for [civName] has ended. It was won by [civNames]. = Die Aufgabe [questName] für [civName] ist beendet. Sie wurde von [civNames] erledigt.
 The resistance in [cityName] has ended! = Der Widerstand in [cityName] ist beendet!
 [cityName] demands [resource]! = [cityName] verlangt [resource]!
-Because they have [resource], the citizens of [cityName] are celebrating We Love The King Day! = Die sie [resource] haben, feiern die Bürger von [cityName] den Wir Lieben Den König Tag!
-We Love The King Day in [cityName] has ended. = Der Wir Lieben Den König Tag hat in [cityName] geendet.
-Our [name] took [tileDamage] tile damage and was destroyed = Unsere [name] hat [tileDamage] Einheitenschaden erlitten und wurde zerstört
-Our [name] took [tileDamage] tile damage = Unsere [name] hat [tileDamage] Einheitenschaden erlitten
-[civName] has adopted the [policyName] policy = [civName] hat die Politik [policyName] verabschiedet
-An unknown civilization has adopted the [policyName] policy = Eine unbekannte Zivilisation hat die Politik [policyName] verabschiedet
+Because they have [resource], the citizens of [cityName] are celebrating We Love The King Day! = Da sie [resource] haben, feiern die Bürger von [cityName] den "Wir lieben den König"-Tag!
+We Love The King Day in [cityName] has ended. = Der "Wir lieben den König"-Tag hat in [cityName] geendet.
+Our [name] took [tileDamage] tile damage and was destroyed = Unsere [name] hat [tileDamage] Einheitenschaden erlitten und wurde zerstört.
+Our [name] took [tileDamage] tile damage = Unsere [name] hat [tileDamage] Einheitenschaden erlitten.
+[civName] has adopted the [policyName] policy = [civName] hat die Politik [policyName] verabschiedet.
+An unknown civilization has adopted the [policyName] policy = Eine unbekannte Zivilisation hat die Politik [policyName] verabschiedet.
 Our influence with City-States has started dropping faster! = Unser Einfluss bei den Stadtstaaten hat begonnen, schneller zu sinken!
 You gained [Stats] as your religion was spread to [cityName] = Du hast [Stats] erhalten, als deine Religion in [cityName] verbreitet wurde
 You gained [Stats] as your religion was spread to an unknown city = Du hast [Stats] erhalten, als deine Religion in einer unbekannten Stadt verbeitet wurde
